Update and rename poplex.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="background-image: url('https://image.kurier.at/images/cfs_616w/3795332/46-130273793.jpg'); background-size: cover; background-repeat: no-repeat;">
     <h1 id="count" style="color: white; margin-left: 45%">Count: 0</h1>
     <a href="#" style="display: flex; justify-items: center; align-items: center; width: 100%; height: 100%">
-        <img src="popcatmc.jpg" alt="POPLEX.IMG" id="backgroundimg" onmousedown="popIt(false)" onmouseup="popIt(true)" style="width: auto; height: 100%; margin-left: 25%" onscroll="popIt(false)">
+        <img src="poplexmc.jpg" alt="POPLEX.IMG" id="backgroundimg" onmousedown="popIt(false)" onmouseup="popIt(true)" style="width: auto; height: 100%; margin-left: 25%" onscroll="popIt(false)">
     </a>
     <script>
         let count = 0;
